# imaris_ims_zarr

./: LICENCE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  release.yml
imaris_ims_file_reader/: ims.py  ims_process_safe_store.py  ims_zarr_store.py
imaris_ims_file_reader/_tests/: test_imsClass.py
imaris_ims_zarr/: __init__.py  ims.py  ims_process_safe_store.py  ims_zarr_store.py
imaris_ims_zarr/_tests/: test_imsClass.py
